Added necessary assets to project. Added pages needed.

--- a/html/calendar.html
+++ b/html/calendar.html
@@ -5,27 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- If using this local comment out this meta. This is to handle Mixed content error on github page. -->
     <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
-    <title>Daily Sidekick App</title>
+    <title>Daily Sidekick App.</title>
     <link href="./css/main.css" rel="stylesheet" />
   </head>
   <body>
     <header>
-      <p>Daily Sidekick</p>
+      <p>Placeholder</p>
     </header>
     <nav>
       <ul>
-        <li><a href="./html/home.html">Home</a></li>
-        <li><a href="./html/calendar.html">Calendar</a></li>
-        <li><a href="./html/addressbook.html">Addressbook</a></li>
-        <li><a href="./html/notes.html">Notes</a></li>
-        <li><a href="./html/myAccount.html">My Account</a></li>
-        <li><a href="./html/contact.html">Contact</a></li>
-        <li><a href="./index.html">Signout</a></li>
+        <li><a href="/html/home.html">Home</a></li>
+        <li><a href="/html/calendar.html">Calendar</a></li>
+        <li><a href="/html/addressbook.html">Addressbook</a></li>
+        <li><a href="/html/notes.html">Notes</a></li>
+        <li><a href="/html/myAccount.html">My Account</a></li>
+        <li><a href="/html/contact.html">Contact</a></li>
+        <li><a href="../index.html">Signout</a></li>
       </ul>
     </nav>
     <section id="mainContent">
       <div class="wrapper">
-        <h1>Login</h1>
+        <h1>Calendar Page</h1>
       </div>
     </section>
     <footer>
