--- a/html/home.html
+++ b/html/home.html
@@ -5,31 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- If using this local comment out this meta. This is to handle Mixed content error on github page. -->
     <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
-    <title>Daily Sidekick App</title>
+    <title>Run npm init to get package.json file.</title>
     <link href="./css/main.css" rel="stylesheet" />
   </head>
   <body>
     <header>
-      <p>Daily Sidekick</p>
+      <p>Placeholder</p>
     </header>
     <nav>
       <ul>
-        <li><a href="./html/home.html">Home</a></li>
-        <li><a href="./html/calendar.html">Calendar</a></li>
-        <li><a href="./html/addressbook.html">Addressbook</a></li>
-        <li><a href="./html/notes.html">Notes</a></li>
-        <li><a href="./html/myAccount.html">My Account</a></li>
-        <li><a href="./html/contact.html">Contact</a></li>
-        <li><a href="./index.html">Signout</a></li>
+        <li><a href="/html/home.html">Home</a></li>
+        <li><a href="/html/calendar.html">Calendar</a></li>
+        <li><a href="/html/addressbook.html">Addressbook</a></li>
+        <li><a href="/html/notes.html">Notes</a></li>
+        <li><a href="/html/myAccount.html">My Account</a></li>
+        <li><a href="/html/contact.html">Contact</a></li>
+        <li><a href="../index.html">Signout</a></li>
       </ul>
     </nav>
     <section id="mainContent">
       <div class="wrapper">
-        <h1>Login</h1>
+        <h1>Home</h1>
       </div>
     </section>
     <footer>
-      <p>Built by Justin Weber for Project and Portfolio IV.</p>
+      <p>Built by Justin Weber for Who knows what.</p>
     </footer>
   <script type="text/javascript" src="./js/main.js"></script>
   </body>
