--- a/html/contact.html
+++ b/html/contact.html
@@ -10,22 +10,22 @@
   </head>
   <body>
     <header>
-      <p>Daily Sidekick</p>
+      <p>Placeholder</p>
     </header>
     <nav>
       <ul>
-        <li><a href="./html/home.html">Home</a></li>
-        <li><a href="./html/calendar.html">Calendar</a></li>
-        <li><a href="./html/addressbook.html">Addressbook</a></li>
-        <li><a href="./html/notes.html">Notes</a></li>
-        <li><a href="./html/myAccount.html">My Account</a></li>
-        <li><a href="./html/contact.html">Contact</a></li>
-        <li><a href="./index.html">Signout</a></li>
+        <li><a href="/html/home.html">Home</a></li>
+        <li><a href="/html/calendar.html">Calendar</a></li>
+        <li><a href="/html/addressbook.html">Addressbook</a></li>
+        <li><a href="/html/notes.html">Notes</a></li>
+        <li><a href="/html/myAccount.html">My Account</a></li>
+        <li><a href="/html/contact.html">Contact</a></li>
+        <li><a href="../index.html">Signout</a></li>
       </ul>
     </nav>
     <section id="mainContent">
       <div class="wrapper">
-        <h1>Login</h1>
+        <h1>Contact</h1>
       </div>
     </section>
     <footer>
