--- a/html/signup.html
+++ b/html/signup.html
@@ -7,10 +7,12 @@
     <!-- If using this local comment out this meta. This is to handle Mixed content error on github page. -->
     <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
     <title>Daily Sidekick App</title>
-    <link href="./css/main.css" rel="stylesheet"/>
+    <link href="../css/main.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body>
+
+
     <section id="loginPage" class="container-fluid">
       <div class="wrapper">
 
@@ -18,10 +20,12 @@
         <img src="./assets/logo.png" alt="Daily Sidekick Logo">
 
         <!-- Login in Heading -->
-        <h1>login to your account</h1>
+        <h1>Signup for a free account</h1>
 
         <!-- Sign in Inputs -->
         <form action="">
+          <label for="name"></label>
+          <input type="text" name="name" value="name">
           <label for="email"></label>
           <input type="email" name="email" value="youremail@mail.com">
           <label for="password"></label>
@@ -42,7 +46,7 @@
 
       </div>
     </section>
-  <script type="text/javascript" src="./js/main.js"></script>
+  <script type="text/javascript" src="../js/main.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!--<script src="js/bootstrap.min.js"></script>-->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"</script>
