--- a/html/addressbook.html
+++ b/html/addressbook.html
@@ -6,31 +6,104 @@
     <!-- If using this local comment out this meta. This is to handle Mixed content error on github page. -->
     <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
     <title>Daily Sidekick App.</title>
-    <link href="./css/main.css" rel="stylesheet" />
+    <link href="../css/main.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body>
     <header>
-      <p>Placeholder</p>
+      <h1>Addressbook</h1>
     </header>
-    <nav>
-      <ul>
-        <li><a href="/html/home.html">Home</a></li>
-        <li><a href="/html/calendar.html">Calendar</a></li>
-        <li><a href="/html/addressbook.html">Addressbook</a></li>
-        <li><a href="/html/notes.html">Notes</a></li>
-        <li><a href="/html/myAccount.html">My Account</a></li>
-        <li><a href="/html/contact.html">Contact</a></li>
-        <li><a href="../index.html">Signout</a></li>
-      </ul>
+
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Daily SideKick</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="/html/home.html">Home</a></li>
+            <li><a href="/html/calendar.html">Calendar</a></li>
+            <li class="active"><a href="/html/addressbook.html">Addressbook <span class="sr-only">(current)</span></a></li>
+            <li><a href="/html/notes.html">Notes</a></li>
+            <li><a href="/html/myAccount.html">My Account</a></li>
+            <li><a href="/html/contact.html">Contact</a></li>
+            <li><a href="../index.html">Signout</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
     </nav>
-    <section id="mainContent">
+
+
+    <section id="addressbookPage">
       <div class="wrapper">
-        <h1>Addressbook</h1>
+
+      <!--/////////////////////////////////////////////-->
+      <!-- Contact list Section -->
+      <!--/////////////////////////////////////////////-->
+
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+
+      <!--/////////////////////////////////////////////-->
+      <!-- Search field w/Add Btn -->
+      <!--/////////////////////////////////////////////-->
+
+      <!-- Search Box -->
+      <form action="">
+        <label for="name"></label>
+        <input type="text" name="name" value="">
+      </form>
+
+      <!-- Add Icon -->
+      <img class="custom-icon" src="../assets/add-icon.png" alt="Add Icon">
+
+      <!--/////////////////////////////////////////////-->
+      <!-- Selected contact info Section -->
+      <!--/////////////////////////////////////////////-->
+
+      <!-- Contacts profile pic. -->
+      <img src="" alt="Image of selected contact">
+
+      <!-- Edit Icon -->
+      <img class="custom-icon" src="../assets/edit-icon.png" alt="Edit Icon">
+
+      <!-- Inputs with contact details -->
+      <form action="">
+        <label for="name">Name</label>
+        <input type="text" name="name" value="">
+
+        <label for="phone">Phone #</label>
+        <input type="phone" name="phone" value="">
+
+        <label for="email">Email</label>
+        <input type="email" name="email" value="">
+      </form>
+
+
       </div>
     </section>
     <footer>
       <p>Built by Justin Weber for Project and Portfolio IV.</p>
     </footer>
-  <script type="text/javascript" src="./js/main.js"></script>
+  <script type="text/javascript" src="../js/main.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!--<script src="js/bootstrap.min.js"></script>-->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"</script>
   </body>
 </html>
