--- a/html/calendar.html
+++ b/html/calendar.html
@@ -6,31 +6,74 @@
     <!-- If using this local comment out this meta. This is to handle Mixed content error on github page. -->
     <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
     <title>Daily Sidekick App.</title>
-    <link href="./css/main.css" rel="stylesheet" />
+    <link href="../css/main.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body>
     <header>
-      <p>Placeholder</p>
+      <h1>Calendar</h1>
     </header>
-    <nav>
-      <ul>
-        <li><a href="/html/home.html">Home</a></li>
-        <li><a href="/html/calendar.html">Calendar</a></li>
-        <li><a href="/html/addressbook.html">Addressbook</a></li>
-        <li><a href="/html/notes.html">Notes</a></li>
-        <li><a href="/html/myAccount.html">My Account</a></li>
-        <li><a href="/html/contact.html">Contact</a></li>
-        <li><a href="../index.html">Signout</a></li>
-      </ul>
+
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Daily SideKick</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="/html/home.html">Home</a></li>
+            <li class="active"><a href="/html/calendar.html">Calendar <span class="sr-only">(current)</span></a></li>
+            <li><a href="/html/addressbook.html">Addressbook</a></li>
+            <li><a href="/html/notes.html">Notes</a></li>
+            <li><a href="/html/myAccount.html">My Account</a></li>
+            <li><a href="/html/contact.html">Contact</a></li>
+            <li><a href="../index.html">Signout</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
     </nav>
-    <section id="mainContent">
+
+
+    <section id="calendarPage">
       <div class="wrapper">
-        <h1>Calendar Page</h1>
+
+
+      <!-- Calendar w/Events -->
+
+
+
+      <!-- Saved Schedule for selected date -->
+
+        <!-- Appointments -->
+
+        <!-- To-Do's -->
+
+        <!-- Shopping List -->
+
+        <!-- Notes -->
+
+
+
+
+
       </div>
     </section>
     <footer>
       <p>Built by Justin Weber for Project and Portfolio IV.</p>
     </footer>
-  <script type="text/javascript" src="./js/main.js"></script>
+  <script type="text/javascript" src="../js/main.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!--<script src="js/bootstrap.min.js"></script>-->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"</script>
   </body>
 </html>
