--- a/html/contact.html
+++ b/html/contact.html
@@ -6,31 +6,126 @@
     <!-- If using this local comment out this meta. This is to handle Mixed content error on github page. -->
     <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
     <title>Daily Sidekick App</title>
-    <link href="./css/main.css" rel="stylesheet" />
+    <link href="../css/main.css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body>
     <header>
-      <p>Placeholder</p>
+      <h1>Contact</h1>
     </header>
-    <nav>
-      <ul>
-        <li><a href="/html/home.html">Home</a></li>
-        <li><a href="/html/calendar.html">Calendar</a></li>
-        <li><a href="/html/addressbook.html">Addressbook</a></li>
-        <li><a href="/html/notes.html">Notes</a></li>
-        <li><a href="/html/myAccount.html">My Account</a></li>
-        <li><a href="/html/contact.html">Contact</a></li>
-        <li><a href="../index.html">Signout</a></li>
-      </ul>
+
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Daily SideKick</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="/html/home.html">Home</a></li>
+            <li><a href="/html/calendar.html">Calendar</a></li>
+            <li><a href="/html/addressbook.html">Addressbook</a></li>
+            <li><a href="/html/notes.html">Notes</a></li>
+            <li><a href="/html/myAccount.html">My Account</a></li>
+            <li class="active"><a href="/html/contact.html">Contact <span class="sr-only">(current)</span></a></li>
+            <li><a href="../index.html">Signout</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
     </nav>
-    <section id="mainContent">
+
+  <!--  <nav class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <ul>
+          <li><a href="/html/home.html">Home</a></li>
+          <li><a href="/html/calendar.html">Calendar</a></li>
+          <li><a href="/html/addressbook.html">Addressbook</a></li>
+          <li><a href="/html/notes.html">Notes</a></li>
+          <li><a href="/html/myAccount.html">My Account</a></li>
+          <li><a href="/html/contact.html">Contact</a></li>
+          <li><a href="../index.html">Signout</a></li>
+        </ul>
+      </div>
+    </nav>
+  -->
+    <section id="contactPage">
       <div class="wrapper">
-        <h1>Contact</h1>
+
+        <!--/////////////////////////////////////////////-->
+        <!-- Contact Us Section -->
+        <!--/////////////////////////////////////////////-->
+        <h2>Contact Us</h2>
+
+        <!-- Contact Info -->
+        <table>
+          <tr>
+            <td>Call:</td>
+            <td>(704) 905-6547</td>
+          </tr>
+
+          <tr>
+            <td>Email:</td>
+            <td>jjweber@fullsail.edu</td>
+          </tr>
+        </table>
+
+        <!-- <div class="asideContents">
+              <p>Have questions or concerns? Reach out to us directly.</p>
+              <p><span><img class="phoneIcon" src="./assets/phone.svg" alt="Phone icon"></span>555.555.5555</p>
+              <p><span><img class="emailIcon"src="./assets/email.svg" alt="Email icon"></span>contact@formdemo.com</p>
+            </div>
+        -->
+
+
+        <!--/////////////////////////////////////////////-->
+        <!-- Message Form Section -->
+        <!--/////////////////////////////////////////////-->
+        <h2>Message Form</h2>
+        <h3>(Leave us a message and we will get back to you!)</h3>
+
+        <!-- Form Inputs and Submit Form Button -->
+        <form>
+          <div class="form-group row">
+            <div class="col-sm-12 col-md-6">
+              <label for="inputName">Name <span>*required</span></label>
+              <input type="text" class="form-control" id="inputName" placeholder="Name">
+            </div>
+            <div class="col-sm-12 col-md-6">
+              <label for="inputEmail">Email <span>*required</span></label>
+              <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+            </div>
+          </div>
+          <div class="form-group row">
+            <div class="col-sm-12">
+              <label for="inputMessage">Message <span>*required</span></label>
+              <input type="text" class="form-control" id="inputMessage" placeholder="Email">
+            </div>
+          </div>
+
+          <!-- Send Button -->
+          <button type="submit" class="btn btn-default">send</button>
+
+          <!-- Clear Button -->
+          <button type="button" name="clear">clear</button>
+        </form>
+
       </div>
     </section>
     <footer>
       <p>Built by Justin Weber for Project and Portfolio IV.</p>
     </footer>
-  <script type="text/javascript" src="./js/main.js"></script>
+  <script type="text/javascript" src="../js/main.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!--<script src="js/bootstrap.min.js"></script>-->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"</script>
   </body>
 </html>
