--- a/html/addressbook.html
+++ b/html/addressbook.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- If using this local comment out this meta. This is to handle Mixed content error on github page. -->
-    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Daily Sidekick App.</title>
     <link href="../css/main.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
   </head>
   <body>
     <header>
@@ -37,7 +37,7 @@
             <li><a href="/html/notes.html">Notes</a></li>
             <li><a href="/html/myAccount.html">My Account</a></li>
             <li><a href="/html/contact.html">Contact</a></li>
-            <li><a href="../index.html">Signout</a></li>
+            <li><a href="/html/index.html">Signout</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -102,8 +102,7 @@
       <p>Built by Justin Weber for Project and Portfolio IV.</p>
     </footer>
   <script type="text/javascript" src="../js/main.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <!--<script src="js/bootstrap.min.js"></script>-->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"</script>
+  <script src="../js/jquery-3.2.1.js"></script>
+  <script src="../js/bootstrap.js"></script>
   </body>
 </html>
