--- a/html/signup.html
+++ b/html/signup.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- If using this local comment out this meta. This is to handle Mixed content error on github page. -->
-    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Daily Sidekick App</title>
     <link href="../css/main.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
   </head>
   <body>
 
@@ -17,7 +17,7 @@
       <div class="wrapper">
 
         <!-- Logo -->
-        <img src="./assets/logo.png" alt="Daily Sidekick Logo">
+        <img src="../assets/logo.png" alt="Daily Sidekick Logo">
 
         <!-- Login in Heading -->
         <h1>Signup for a free account</h1>
@@ -47,8 +47,7 @@
       </div>
     </section>
   <script type="text/javascript" src="../js/main.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <!--<script src="js/bootstrap.min.js"></script>-->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"</script>
+  <script src="../js/jquery-3.2.1.js"></script>
+  <script src="../js/bootstrap.js"></script>
   </body>
 </html>
