Moved index.html back to root level in order to display project on Github Pages.

--- a/html/home.html
+++ b/html/home.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- If using this local comment out this meta. This is to handle Mixed content error on github page. -->
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Run npm init to get package.json file.</title>
     <link href="../css/main.css" rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
@@ -37,7 +37,7 @@
             <li><a href="/html/notes.html">Notes</a></li>
             <li><a href="/html/myAccount.html">My Account</a></li>
             <li><a href="/html/contact.html">Contact</a></li>
-            <li><a href="/html/index.html">Signout</a></li>
+            <li><a href="../index.html">Signout</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
