--- a/html/contact.html
+++ b/html/contact.html
@@ -37,7 +37,7 @@
             <li><a href="/html/notes.html">Notes</a></li>
             <li><a href="/html/myAccount.html">My Account</a></li>
             <li class="active"><a href="/html/contact.html">Contact <span class="sr-only">(current)</span></a></li>
-            <li><a href="/html/index.html">Signout</a></li>
+            <li><a href="../index.html">Signout</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
