--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="wrapper">
 
         <!-- Logo -->
-        <img src="/assets/logo.png" alt="Daily Sidekick Logo">
+        <img src="./assets/logo.png" alt="Daily Sidekick Logo">
 
         <!-- Login in Heading -->
         <h1>login to your account</h1>
@@ -32,7 +32,7 @@
         <p>Forgot Password?</p>
 
         <!-- Login Link -->
-        <a id="loginBtn" href="/html/home.html" role="button">login</a>
+        <a id="loginBtn" href="./html/home.html" role="button">login</a>
 
         <!-- Create Account Link -->
         <a id="createBtn" href="">create account</a>
