Moved index.html back to root level in order to display project on Github Pages.

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- If using this local comment out this meta. This is to handle Mixed content error on github page. -->
-    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Daily Sidekick App</title>
-    <link href="/css/main.css" rel="stylesheet"/>
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
+    <link type="text/css" href="./css/main.css" rel="stylesheet"/>
+    <link type="text/css" href="./css/bootstrap.css" rel="stylesheet">
   </head>
   <body>
     <section id="loginPage" class="container-fluid">
       <div class="wrapper">
 
         <!-- Logo -->
-        <img src="/assets/logo.png" alt="Daily Sidekick Logo">
+        <img src="./assets/logo.png" alt="Daily Sidekick Logo">
 
         <!-- Login in Heading -->
         <h1>login to your account</h1>
@@ -32,7 +32,7 @@
         <p>Forgot Password?</p>
 
         <!-- Login Link -->
-        <a id="loginBtn" href="/html/home.html" role="button">login</a>
+        <a id="loginBtn" href="./html/home.html" role="button">login</a>
 
         <!-- Create Account Link -->
         <a id="createBtn" href="">create account</a>
@@ -42,8 +42,8 @@
 
       </div>
     </section>
-  <script type="text/javascript" src="/js/main.js"></script>
-  <script src="/js/jquery-3.2.1.js"></script>
-  <script src="/js/bootstrap.js"></script>
+  <script type="text/javascript" src="./js/main.js"></script>
+  <script type="text/javascript" src="./js/jquery-3.2.1.js"></script>
+  <script type="text/javascript" src="./js/bootstrap.js"></script>
   </body>
 </html>
