--- a/addressbook.html
+++ b/addressbook.html
@@ -6,8 +6,8 @@
     <!-- If using this local comment out this meta. This is to handle Mixed content error on github page. -->
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Daily Sidekick App.</title>
-    <link href="../css/main.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+    <link href="/css/main.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
   </head>
   <body>
     <header>
@@ -31,13 +31,13 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="/html/home.html">Home</a></li>
-            <li><a href="/html/calendar.html">Calendar</a></li>
-            <li class="active"><a href="/html/addressbook.html">Addressbook <span class="sr-only">(current)</span></a></li>
-            <li><a href="/html/notes.html">Notes</a></li>
-            <li><a href="/html/myAccount.html">My Account</a></li>
-            <li><a href="/html/contact.html">Contact</a></li>
-            <li><a href="../index.html">Signout</a></li>
+            <li><a href="/home.html">Home</a></li>
+            <li><a href="/calendar.html">Calendar</a></li>
+            <li class="active"><a href="/addressbook.html">Addressbook <span class="sr-only">(current)</span></a></li>
+            <li><a href="/notes.html">Notes</a></li>
+            <li><a href="/myAccount.html">My Account</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="/index.html">Signout</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -71,7 +71,7 @@
       </form>
 
       <!-- Add Icon -->
-      <img class="custom-icon" src="../assets/add-icon.png" alt="Add Icon">
+      <img class="custom-icon" src="/assets/add-icon.png" alt="Add Icon">
 
       <!--/////////////////////////////////////////////-->
       <!-- Selected contact info Section -->
@@ -81,7 +81,7 @@
       <img src="" alt="Image of selected contact">
 
       <!-- Edit Icon -->
-      <img class="custom-icon" src="../assets/edit-icon.png" alt="Edit Icon">
+      <img class="custom-icon" src="/assets/edit-icon.png" alt="Edit Icon">
 
       <!-- Inputs with contact details -->
       <form action="">
@@ -101,8 +101,8 @@
     <footer>
       <p>Built by Justin Weber for Project and Portfolio IV.</p>
     </footer>
-  <script type="text/javascript" src="../js/main.js"></script>
-  <script src="../js/jquery-3.2.1.js"></script>
-  <script src="../js/bootstrap.js"></script>
+  <script type="text/javascript" src="/js/main.js"></script>
+  <script src="/js/jquery-3.2.1.js"></script>
+  <script src="/js/bootstrap.js"></script>
   </body>
 </html>
