--- a/home.html
+++ b/home.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- If using this local comment out this meta. This is to handle Mixed content error on github page. -->
-    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Run npm init to get package.json file.</title>
-    <link href="../css/main.css" rel="stylesheet"/>
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+    <link href="./css/main.css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
   </head>
   <body>
     <header>
@@ -31,13 +31,13 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/html/home.html">Home <span class="sr-only">(current)</span></a></li>
-            <li><a href="/html/calendar.html">Calendar</a></li>
-            <li><a href="/html/addressbook.html">Addressbook</a></li>
-            <li><a href="/html/notes.html">Notes</a></li>
-            <li><a href="/html/myAccount.html">My Account</a></li>
-            <li><a href="/html/contact.html">Contact</a></li>
-            <li><a href="../index.html">Signout</a></li>
+            <li class="active"><a href="./home.html">Home <span class="sr-only">(current)</span></a></li>
+            <li><a href="./calendar.html">Calendar</a></li>
+            <li><a href="./addressbook.html">Addressbook</a></li>
+            <li><a href="./notes.html">Notes</a></li>
+            <li><a href="./myAccount.html">My Account</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="./index.html">Signout</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -230,8 +230,8 @@
     <footer>
       <p>Built by Justin Weber for Who knows what.</p>
     </footer>
-  <script type="text/javascript" src="../js/main.js"></script>
-  <script src="../js/jquery-3.2.1.js"></script>
-  <script src="../js/bootstrap.js"></script>
+  <script type="text/javascript" src="./js/main.js"></script>
+  <script src="./js/jquery-3.2.1.js"></script>
+  <script src="./js/bootstrap.js"></script>
   </body>
 </html>
