--- a/notes.html
+++ b/notes.html
@@ -31,13 +31,13 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="/html/home.html">Home</a></li>
-            <li><a href="/html/calendar.html">Calendar</a></li>
-            <li><a href="/html/addressbook.html">Addressbook</a></li>
-            <li class="active"><a href="/html/notes.html">Notes <span class="sr-only">(current)</span></a></li>
-            <li><a href="/html/myAccount.html">My Account</a></li>
-            <li><a href="/html/contact.html">Contact</a></li>
-            <li><a href="../index.html">Signout</a></li>
+            <li><a href="/home.html">Home</a></li>
+            <li><a href="/calendar.html">Calendar</a></li>
+            <li><a href="/addressbook.html">Addressbook</a></li>
+            <li class="active"><a href="/notes.html">Notes <span class="sr-only">(current)</span></a></li>
+            <li><a href="/myAccount.html">My Account</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="/index.html">Signout</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -74,8 +74,8 @@
         </ul>
 
         <!-- Edit Icons -->
-        <img class="custom-icon" src="../assets/edit-icon.png" alt="Edit Icon">
-        <img class="custom-icon" src="../assets/edit-icon.png" alt="Edit Icon">
+        <img class="custom-icon" src="/assets/edit-icon.png" alt="Edit Icon">
+        <img class="custom-icon" src="/assets/edit-icon.png" alt="Edit Icon">
 
         <!-- Read More block that expands to display more -->
         <!-- Will only be visible on small and medium screens -->
@@ -87,8 +87,8 @@
     <footer>
       <p>Built by Justin Weber for Project and Portfolio IV.</p>
     </footer>
-  <script type="text/javascript" src="../js/main.js"></script>
-  <script src="../js/jquery-3.2.1.js"></script>
-  <script src="../js/bootstrap.js"></script>
+  <script type="text/javascript" src="/js/main.js"></script>
+  <script src="/js/jquery-3.2.1.js"></script>
+  <script src="/js/bootstrap.js"></script>
   </body>
 </html>
