Moved index.html back to root level in order to display project on Github Pages.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p>Forgot Password?</p>
 
         <!-- Login Link -->
-        <a id="loginBtn" href="./html/home.html" role="button">login</a>
+        <a id="loginBtn" href="/home.html" role="button">login</a>
 
         <!-- Create Account Link -->
         <a id="createBtn" href="">create account</a>
