--- a/home.html
+++ b/home.html
@@ -31,13 +31,13 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="./home.html">Home <span class="sr-only">(current)</span></a></li>
-            <li><a href="./calendar.html">Calendar</a></li>
-            <li><a href="./addressbook.html">Addressbook</a></li>
-            <li><a href="./notes.html">Notes</a></li>
-            <li><a href="./myAccount.html">My Account</a></li>
-            <li><a href="./contact.html">Contact</a></li>
-            <li><a href="./index.html">Signout</a></li>
+            <li class="active"><a href="/home.html">Home <span class="sr-only">(current)</span></a></li>
+            <li><a href="/calendar.html">Calendar</a></li>
+            <li><a href="/addressbook.html">Addressbook</a></li>
+            <li><a href="/notes.html">Notes</a></li>
+            <li><a href="/myAccount.html">My Account</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="/index.html">Signout</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
