--- a/signup.html
+++ b/signup.html
@@ -7,8 +7,8 @@
     <!-- If using this local comment out this meta. This is to handle Mixed content error on github page. -->
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Daily Sidekick App</title>
-    <link href="../css/main.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+    <link href="./css/main.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
   </head>
   <body>
 
@@ -17,7 +17,7 @@
       <div class="wrapper">
 
         <!-- Logo -->
-        <img src="../assets/logo.png" alt="Daily Sidekick Logo">
+        <img src="./assets/logo.png" alt="Daily Sidekick Logo">
 
         <!-- Login in Heading -->
         <h1>Signup for a free account</h1>
@@ -36,7 +36,7 @@
         <p>Forgot Password?</p>
 
         <!-- Login Link -->
-        <a id="loginBtn" href="./html/home.html" role="button">login</a>
+        <a id="loginBtn" href="home.html" role="button">login</a>
 
         <!-- Create Account Link -->
         <a id="createBtn" href="">create account</a>
@@ -46,8 +46,8 @@
 
       </div>
     </section>
-  <script type="text/javascript" src="../js/main.js"></script>
-  <script src="../js/jquery-3.2.1.js"></script>
-  <script src="../js/bootstrap.js"></script>
+  <script type="text/javascript" src="./js/main.js"></script>
+  <script src="./js/jquery-3.2.1.js"></script>
+  <script src="./js/bootstrap.js"></script>
   </body>
 </html>
